fix: prevent horizontal overflow

--- a/css/style.css
+++ b/css/style.css
@@ -84,6 +84,10 @@ span {
   margin: 0;
 }
 
+html {
+  overflow-x: hidden;
+}
+
 body {
   overflow-x: hidden;
   scroll-behavior: smooth;
@@ -2770,7 +2774,7 @@ body.loaded {
 .preloader svg {
   position: absolute;
   top: 0;
-  width: 100vw;
+  width: 100%;
   height: 110vh;
   fill: #1a1a1a;
 }
